# phaustoDynEngine

./: LICENSE  Makefile  Makefile.am  Makefile.in  README.md  config.status  configure  configure.ac  libtool
.github/: workflows
.github/wokflows/: windows.yml
.github/workflows/: ci.yml  windows.yml
librariesBundle_Linux/: libFLAC.so.8.3.0  librtaudio.so.6.0.0  librtmidi.so.4.0.0  test_faust  test_faust.cpp
librariesBundle_Linux/faustLibs/: loopPlayer1.dsp  phaustoStandard.lib  phaustoSynths.lib  sampPlayer.dsp
tests/: test_dynamic_engine.cpp
